--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -341,6 +341,10 @@ jobs:
         run: echo ==============================  Scenario74tests ====================================
           \ && cd awsome && mvn test -Dtest="Scenario74Tests"
 
+      - name: Test Scenario75test
+        run: echo ==============================  Scenario75tests ====================================
+          \ && cd awsome && mvn test -Dtest="Scenario75Tests"
+
 
       - name: Test All Scenarios
         run: echo ==============================  All The Scenario ====================================
