--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -345,6 +345,9 @@ jobs:
         run: echo ==============================  Scenario75tests ====================================
           \ && cd awsome && mvn test -Dtest="Scenario75Tests"
 
+      - name: Test Scenario76test
+        run: echo ==============================  Scenario76tests ====================================
+          \ && cd awsome && mvn test -Dtest="Scenario76Tests"
 
       - name: Test All Scenarios
         run: echo ==============================  All The Scenario ====================================
