--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,362 +2,36 @@ name: Build
 
 on:
   push:
-    branches: [ main ]
+    branches: [ go_v2 ]
   pull_request:
-    branches: [ main ]
+    branches: [ go_v2 ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  go-tests:
+    runs-on: self-hosted
+    timeout-minutes: 30
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
-          java-version: '11'
-          distribution: 'adopt'
-
-      - name: Test Scenario01Tests
-        run: echo ==============================  Scenario01Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario01Tests"
-
-      - name: Test Scenario02Tests
-        run: echo ==============================  Scenario02Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario02Tests"
-
-      - name: Test Scenario03Tests
-        run: echo ==============================  Scenario03Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario03Tests"
-
-      - name: Test Scenario04Tests
-        run: echo ==============================  Scenario04Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario04Tests"
-
-      - name: Test Scenario05Tests
-        run: echo ==============================  Scenario05Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario05Tests"
-
-      - name: Test Scenario06Tests
-        run: echo ==============================  Scenario06Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario06Tests"
-
-      - name: Test Scenario07Tests
-        run: echo ==============================  Scenario07Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario07Tests"
-
-      - name: Test Scenario08Tests
-        run: echo ==============================  Scenario08Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario08Tests"
-
-      - name: Test Scenario09Tests
-        run: echo ==============================  Scenario09Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario09Tests"
-
-      - name: Test Scenario10Tests
-        run: echo ==============================  Scenario10Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario10Tests"
-
-      - name: Test Scenario11Tests
-        run: echo ==============================  Scenario11Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario11Tests"
-
-      - name: Test Scenario12Tests
-        run: echo ==============================  Scenario12Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario12Tests"
-
-      - name: Test Scenario13Tests
-        run: echo ==============================  Scenario13Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario13Tests"
-
-      - name: Test Scenario14Tests
-        run: echo ==============================  Scenario14Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario14Tests"
-
-      - name: Test Scenario15Tests
-        run: echo ==============================  Scenario15Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario15Tests"
-
-      - name: Test Scenario16Tests
-        run: echo ==============================  Scenario16Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario16Tests"
-
-      - name: Test Scenario17Tests
-        run: echo ==============================  Scenario17Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario17Tests"
-
-      - name: Test Scenario18Tests
-        run: echo ==============================  Scenario18Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario18Tests"
-
-      - name: Test Scenario19Tests
-        run: echo ==============================  Scenario19Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario19Tests"
-
-      - name: Test Scenario20Test
-        run: echo ==============================  Scenario20Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario20Tests"
-
-      - name: Test Scenario21Test
-        run: echo ==============================  Scenario21Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario21Tests"
-
-      - name: Test Scenario22Test
-        run: echo ==============================  Scenario22Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario22Tests"
-
-      - name: Test Scenario23Test
-        run: echo ==============================  Scenario23Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario23Tests"
-
-      - name: Test Scenario24Test
-        run: echo ==============================  Scenario24Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario24Tests"
-
-      - name: Test Scenario25Test
-        run: echo ==============================  Scenario25Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario25Tests"
-
-      - name: Test Scenario26Test
-        run: echo ==============================  Scenario26Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario26Tests"
-
-      - name: Test Scenario27Test
-        run: echo ==============================  Scenario27Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario27Tests"
-
-      - name: Test Scenario28Test
-        run: echo ==============================  Scenario28Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario28Tests"
-
-      - name: Test Scenario29Test
-        run: echo ==============================  Scenario29Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario29Tests"
-
-      - name: Test Scenario30Test
-        run: echo ==============================  Scenario30Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario30Tests"
-
-      - name: Test Scenario31Test
-        run: echo ==============================  Scenario31Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario31Tests"
-
-      - name: Test Scenario32Test
-        run: echo ==============================  Scenario32Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario32Tests"
-
-      - name: Test Scenario33Test
-        run: echo ==============================  Scenario33Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario33Tests"
-
-      - name: Test Scenario34Test
-        run: echo ==============================  Scenario34Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario34Tests"
-
-      - name: Test Scenario35Test
-        run: echo ==============================  Scenario35Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario35Tests"
-
-      - name: Test Scenario36Test
-        run: echo ==============================  Scenario36Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario36Tests"
-
-      - name: Test Scenario37Test
-        run: echo ==============================  Scenario37Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario37Tests"
-
-      - name: Test Scenario38Test
-        run: echo ==============================  Scenario38Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario38Tests"
-
-      - name: Test Scenario39Test
-        run: echo ==============================  Scenario39Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario39Tests"
-
-      - name: Test Scenario40Test
-        run: echo ==============================  Scenario40Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario40Tests"
-
-      - name: Test Scenario41Test
-        run: echo ==============================  Scenario41Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario41Tests"
-
-      - name: Test Scenario42Test
-        run: echo ==============================  Scenario42Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario42Tests"
-
-
-      - name: Test Scenario43Test
-        run: echo ==============================  Scenario43Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario43Tests"
-
-
-      - name: Test Scenario44Test
-        run: echo ==============================  Scenario44Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario44Tests"
-
-
-      - name: Test Scenario45Test
-        run: echo ==============================  Scenario45Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario45Tests"
-
-
-      - name: Test Scenario46Test
-        run: echo ==============================  Scenario46Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario46Tests"
-
-
-      - name: Test Scenario47Test
-        run: echo ==============================  Scenario47Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario47Tests"
-
-
-      - name: Test Scenario48Test
-        run: echo ==============================  Scenario48Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario48Tests"
-
-
-      - name: Test Scenario49Test
-        run: echo ==============================  Scenario49Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario49Tests"
-
-
-      - name: Test Scenario50Test
-        run: echo ==============================  Scenario50Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario50Tests"
-
-
-      - name: Test Scenario51Test
-        run: echo ==============================  Scenario51Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario51Tests"
-
-
-      - name: Test Scenario52Test
-        run: echo ==============================  Scenario52Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario52Tests"
-
-
-      - name: Test Scenario53Test
-        run: echo ==============================  Scenario53Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario53Tests"
-
-
-      - name: Test Scenario54Test
-        run: echo ==============================  Scenario54Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario54Tests"
-
-
-      - name: Test Scenario55Test
-        run: echo ==============================  Scenario55Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario55Tests"
-
-
-      - name: Test Scenario56Test
-        run: echo ==============================  Scenario56Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario56Tests"
-
-
-      - name: Test Scenario57Test
-        run: echo ==============================  Scenario57Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario57Tests"
-
-      - name: Test Scenario58Test
-        run: echo ==============================  Scenario58Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario58Tests"
-
-      - name: Test Scenario59test
-        run: echo ==============================  Scenario59Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario59Tests"
-
-
-      - name: Test Scenario60test
-        run: echo ==============================  Scenario60tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario60Tests"
-
-
-      - name: Test Scenario61test
-        run: echo ==============================  Scenario61tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario61Tests"
-
-      - name: Test Scenario62test
-        run: echo ==============================  Scenario62tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario62Tests"
-
-      - name: Test Scenario63test
-        run: echo ==============================  Scenario63tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario63Tests"
-
-
-      - name: Test Scenario64test
-        run: echo ==============================  Scenario64tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario64Tests"
-
-
-      - name: Test Scenario65test
-        run: echo ==============================  Scenario65tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario65Tests"
-
-
-      - name: Test Scenario66test
-        run: echo ==============================  Scenario66tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario66Tests"
-
-
-      - name: Test Scenario67test
-        run: echo ==============================  Scenario67tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario67Tests"
-
-
-      - name: Test Scenario68test
-        run: echo ==============================  Scenario68tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario68Tests"
-
-
-      - name: Test Scenario69test
-        run: echo ==============================  Scenario69tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario69Tests"
-
-
-      - name: Test Scenario70test
-        run: echo ==============================  Scenario70tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario70Tests"
-
-
-      - name: Test Scenario71test
-        run: echo ==============================  Scenario71tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario71Tests"
-
-      - name: Test Scenario72test
-        run: echo ==============================  Scenario72tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario72Tests"
-
-
-      - name: Test Scenario73test
-        run: echo ==============================  Scenario73tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario73Tests"
-
-      - name: Test Scenario74test
-        run: echo ==============================  Scenario74tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario74Tests"
-
-      - name: Test Scenario75test
-        run: echo ==============================  Scenario75tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario75Tests"
-
-      - name: Test Scenario76test
-        run: echo ==============================  Scenario76tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario76Tests"
-      
-      - name: Test Scenario77test
-        run: echo ==============================  Scenario77tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario77Tests"
-
-      - name: Test Scenario78test
-        run: echo ==============================  Scenario78tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario78Tests"
-
-
-      - name: Test All Scenarios
-        run: echo ==============================  All The Scenario ====================================
-          \ && cd awsome && mvn test
+          go-version: 1.21.0
+          cache: false
+      - name: Verify go.mod is tidy
+        run: |
+          go mod tidy
+          git diff --exit-code
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: v1.55.2
+          args: -j 16 --verbose --timeout 20m --max-same-issues=30 --allow-parallel-runners
+          skip-cache: true
+      - name: Run all tests
+        run: go test ./...
+      - name: Pretty print tests running time
+        # grep: filter out lines like "--- PASS: TestVCS (15.04s)"
+        # sed: remove unnecessary characters
+        # awk: re-format lines to "PASS: TestVCS (15.04s)"
+        # sort: cut into columns by delimiter ' ' (single space) and sort by column 3 (test time in seconds) as numeric type in reverse order (largest comes first)
+        # awk: accumulate sum by test time in seconds
+        run: grep --color=never -e '--- PASS:' -e '--- FAIL:' test.log | sed 's/[:()]//g' | awk '{print $2,$3,$4}' | sort -t' ' -nk3 -r | awk '{sum += $3; print $1,$2,$3,sum"s"}'
